17 November 2007
	* added X11_FONT_DIR3 to Makefile for X11 default TTF directory
	* added scalable font & height handling to XLoadFont with X11 fonts.dir
	* added input window handling to XCreateWindow (Giosis/Foedrowitz)
	* added BIGENDIAN option to Makefile
	* fix XCreateBitmapFromData for big endian (Giosis/Foedrowitz)
	* fix XDrawPoints past first coord (Giosis/Foedrowitz)
	* fix memory leak in XSetClipMask and XSetClipRectangles
	* rewrite XChangeProperty, never worked, implement XGetWindowProperty
	* fix XInternAtom to return above XA_LAST_PREDEFINED
14 June 2005
	* add XSetSelectionOwner,XGetSelectionOwner,XConvertSelection (Jordan)
Version 0.45 - 11 Sep 2003 - greg@censoft.com
	* added XAllocWMHints, XAllocSizeHints for FLTK 1.1.4
	* fixed 'p' entry in mwscan_to_mwkey
	* added X headers to nxlib distribution, X11 now not required to build
	* added Jordan's mods for better GTK (1.2.10) compatibility:
		XwcTextListToProperty, XwcPropertyToTextList, XWcFreeTextList
		fixed XPutImage w/src_x not 0 or unequal widths
		stubbed out XCreateFontSet
		added XGetSelectionOwner, XSetSelectionOwner, XConvertCase
	* temp kluged problem with X11 width/height vs NX radius for arc specs
	* fixed XDrawRectangle, XDrawArc width/height +1 bug
	* fixed angle1/angle2 difference between X11 and Nano-X in XDraw/FillArc
Version 0.44 - 1 June 2003 - greg@censoft.com
	* fixed GrGetColorByName return value
	* added XMapSubwindows for xpilot
	* added XKeycodeToKeysym
	* return XKeyEvent.keycode as scancode (must be < 256 for FLTK)
	* add standard scancode table for XKeycodeToKeysym
	* implement XKeycodeToKeysym, rewrite XLookupKeysym
	* fix XQueryFont for fonts with firstchar > 256
	* added to CVS
	* changed decl for XrmLocaleOfDatabase (removed XCONST)
	* comment out XSetTSOrigin for fltk test/bitmap
	* added XQueryKeymap for fltk 1.0.11 build
Version 0.43 - 18 May 2003 - greg@censoft.com
	* fixed XQueryPointer return values